<resources>
    <string name="app_name">Evento</string>

    <!-- Tabs names -->
    <string name="HomeTab">Home</string>
    <string name="ProfileTab">Profile</string>
    <string name="EventsTab">Events</string>
    <string name="TimetableTab">TimeTable</string>
    <string name="FollowingTab">Following</string>
    <string name="FollowersTab">Followers</string>
    <string name="JointTab">Joint</string>
    <string name="CreatedTab">Created</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_Home_fragment">Hello home fragment</string>
    <string name="hello_Events_fragment">Hello event fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="hello_timetable_fragment">Hello timetable fragment</string>

    <!-- bottons names -->
    <string name="BTfollowing">Following</string>
    <string name="BTfollowers">Followers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_profile">Evento</string>
    <string name="title_activity_show_event">Evento</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_activity_show_post">Evento</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_create_post">Evento</string>

    <string name="title_activity_fullscreen">Evento</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Strings related to Log in activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <!-- create new account azwedha law m3ltsh FLOATACTIONBUTTON -->


    <!-- strings related to signup activity -->
    <string name="confirmPassword">Confirm Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="TVgender">Gender: </string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="dateFormat">01/01/2000</string>
    <string name="btn_display">Display</string>
    <string name="picChoice">Upload Your Picture</string>
    <string name="TVdate">Birth Date: </string>
    <string name="BTinterets">Choose your interests</string>
    <string name="interests">Choose Your Interests</string>
    <string name="BTcontinue">Continue</string>
    <string name="BTsignup">Sign up</string>
    <string name="TVuserlocation">Your location</string>
    <string name="TVeventlocation">Event location</string>
    <string name="ETeventdescription">Enter Event Description</string>
    <string name="TVeventCategories">Choose Event Category</string>
    <string name="BTpublish">Publish</string>

    <string-array name="governorates">
        <item>Cairo</item>
        <item>Giza</item>
        <item>Alexandria</item>
        <item>Faiyum</item>
        <item>Monufia</item>
        <item>Sharqia</item>
        <item>Suez</item>
        <item>Red Sea</item>
        <item>Matruh</item>
        <item>Aswan</item>
    </string-array>

    <!-- Strings related to create event activity -->
    <string name="TVeventname">Event Name</string>
    <string name="TVstartdate">Start Date</string>
    <string name="TVenddate">End Date</string>
    <string name="title_activity_main">Evento</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
