<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.activities.SignupTwoActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/IVProfilePic"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_action_account_circle_40" />

                    <ProgressBar
                        android:id="@+id/imagebar"
                        android:layout_width="35dp"
                        android:layout_height="35dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="359dp"
                    android:layout_height="128dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/ETfname"
                        android:layout_width="228dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/fname"
                        android:textAlignment="center" />


                    <EditText
                        android:id="@+id/ETlname"
                        android:layout_width="232dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/lname"
                        android:textAlignment="center" />


                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.06"
                android:text="@string/TVgender"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/RGgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.11"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RBmale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/RBfemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:text="@string/radio_female" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.05"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="@string/TVdate"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TVdate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/dateFormat"
                    android:onClick="addListenerOnDateButton"
                    android:textSize="20sp"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/TVuserlocation"
                    android:textSize="20sp" />


                <Spinner
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:entries="@array/governorates" />
            </LinearLayout>

            <Button
                android:id="@+id/BTcontinue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="80dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/colorFontBotton"
                android:background="@color/colorAccent"
                android:text="@string/BTcontinue" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
