<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.activities.SignupOneActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ETemailSignup"
                android:hint="@string/email"
                android:textAlignment="center"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ETpassword1"
                android:hint="@string/password"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ETpassword2"
                android:hint="@string/confirmPassword"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BTcontinue"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_gravity="center"
                android:onClick="onContinueClick"
                android:background="@color/colorAccent"
                android:textColor="@color/colorFontBotton"
                android:id="@+id/BTcontinue"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
