<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.activities.CreateEventOneActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.05"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TVeventname"
                    android:textSize="20sp"
                    android:layout_marginRight="30dp"/>

                <EditText android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:id="@+id/ETeventname"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/TVstartdate"
                    android:textSize="20sp"
                    android:clickable="false"
                    android:gravity="center"
                    android:id="@+id/TVsdate"
                    android:onClick="addListenerOnDateButton"

                    />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/TVenddate"
                    android:textSize="20sp"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:id="@+id/TVedate"
                    android:onClick=""

                    />

            </LinearLayout>

            <ImageView
                android:layout_width="350dp"
                android:layout_height="170dp"
                android:id="@+id/IVcover"
                android:src="@drawable/event" />

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/imagebar1"/>


            <EditText
                android:layout_width="350dp"
                android:layout_height="95dp"
                android:hint="@string/ETeventdescription"
                android:id="@+id/ETeventdesc"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_column="0"
                    android:textSize="20sp"
                    android:text="@string/TVeventlocation" />


                <Spinner
                    android:id="@+id/eventlocation"
                    android:entries="@array/governorates"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BTcontinue"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:textColor="@color/colorFontBotton"
                android:id="@+id/BTeventcontinue"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
