<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.activities.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_login_form"
            android:orientation="vertical">

            <ImageView
                android:layout_width="209dp"
                android:layout_height="234dp"
                android:id="@+id/imageView"
                android:src="@drawable/logo_evento"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ETemailLogin"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ETpassword"
                android:hint="@string/password"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPassword"
                android:text="Forgotten account?"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:onClick=""
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="#FFFFFF"
                android:id="@+id/BTlogin"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create New Account"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@color/colorAccent"
                android:textColor="#FFFFFF"
                android:onClick=""
                android:id="@+id/BTregister" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
